# mfg-dataplatform-defectrisk

./: .gitignore  LICENSE  README.md  pyproject.toml
analytics/: generate_dashboard.py  generate_report.py
analytics/notebooks/: int_analysis.ipynb  ml_prep.ipynb  raw_profiling.ipynb  staged_qa.ipynb
analytics/reports/: dashboard.html  generate_dashboard.py  generate_report.py  report.html
data-pipeline/models/marts/: mart_quality__defect_rates.sql  mart_quality__operator_performance.sql  schema_mart.yml
data-pipeline/models/staging/: schema_staging.yml  sources.yml
data-pipeline/notebooks/: int_analysis.ipynb  raw_profiling.ipynb
data/generate/: config.py  run_generator.py
data/generate/dirty/: transformations.py
data/generate/generators/: machines.py  (+4 more)
data_pipeline/: dbt_project.yml
data_source/generate/: config.py  run_generator.py
docs/reports/: dashboard.html  ml_overview.html  ml_technical.html  monitoring_report.html
ml/notebooks/: ml_prep.ipynb
ml/reports/: build.sh  erp_dashboard.html  generate_erp_dashboard.py  generate_ml_overview.py  generate_ml_report.py  generate_ml_technical.py  generate_monitoring_report.py  index.qmd  ml_overview.html  ml_report.html  ml_technical.html  monitoring_report.html
ml/src/: features.py  monitoring.py  scoring.py  training.py
ml/tests/: test_training.py
notebooks/: int_analysis.ipynb  ml_prep.ipynb  raw_profiling.ipynb  staged_qa.ipynb
reports/: _quarto.yml  build.sh  dashboard.html  generate_erp_dashboard.py  generate_ml_report.py  ml_report.html
reports/_site/: index.html  report.html
(+1733 files in other folders)
