[project]
name = "brim-systems-portfolio"
version = "0.1.0"
description = "BRIM Systems data and ML portfolio"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "faker>=20.0",
    "duckdb>=0.10",
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    "scikit-learn>=1.4",
    "mlflow>=2.12",
    "shap>=0.45",
    "statsforecast>=1.7",
    "pyod>=1.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.3",
    "pre-commit>=3.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "shared*"]